# weighted_average_quaternion

./: CMakeLists.txt  README.md  package.xml  rviz.rviz
src/: wma.hpp  wma_quaternions.cpp  wma_theta.cpp
